# agent_evaluation

./: .env_example  .gitignore  10_groq_deepeval.ipynb  12-azure_ragas.ipynb  13-ragas.ipynb  1_custom_groq_class.py  2.test_cases.py  2_test_cases.py  3.1_enhanced_eval.py  3_evaluation_deepEval.py  4_push_langmsmith.py  README.md  pyproject.toml
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
.github/workflows/: rag-eval.yml
