[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.18",
    "deepeval>=4.0.5",
    "langchain>=1.3.2",
    "langchain-aws>=0.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.0",
    "langchain-openai>=1.1.0",
    "langsmith>=0.8.7",
    "openai>=2.8.0",
    "ragas==0.1.10",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
